examples/test/testpolicy17996.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17996
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key36: value34
      key49: value44
      key17: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value23
          key42: value46
      podSelector:
        matchLabels:
          key24: value49
          key4: value2
          key31: value5
